Implemented the post data and dvd

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,11 +15,11 @@
                 <mat-icon class="example-icon">account_circle</mat-icon>
             </mat-toolbar-row>
 
-            <mat-toolbar-row [routerLink]="['return-item']" (click)="sidenav.toggle()">
+            <!--<mat-toolbar-row [routerLink]="['return-item']" (click)="sidenav.toggle()">
                 <span>Return Item</span>
                 <span class="app-toolbar-filler"></span>
                 <mat-icon class="example-icon">account_circle</mat-icon>
-            </mat-toolbar-row>
+            </mat-toolbar-row>-->
 
             <mat-toolbar-row [routerLink]="['add-item']" (click)="sidenav.toggle()">
                 <span>Add Item</span>
@@ -27,11 +27,11 @@
                 <mat-icon class="example-icon">account_circle</mat-icon>
             </mat-toolbar-row>
 
-            <mat-toolbar-row [routerLink]="['delete-item']" (click)="sidenav.toggle()">
+            <!--<mat-toolbar-row [routerLink]="['delete-item']" (click)="sidenav.toggle()">
                 <span>Delete Item</span>
                 <span class="app-toolbar-filler"></span>
                 <mat-icon class="example-icon">account_circle</mat-icon>
-            </mat-toolbar-row>
+            </mat-toolbar-row>-->
 
             <mat-toolbar-row [routerLink]="['view-all']" (click)="sidenav.toggle()">
                 <span>View All Items</span>
