--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,22 +9,19 @@
                 </i>
           <a class="card-body text-center bg-primary text-light item-links">Lend Item </a>       
             -->
-          <button mat-mini-fab color="primary"> <i class="material-icons">
-              assignment_return
-            </i>
-            </button>
+
             <a class="card-body text-center bg-primary text-light item-links">Lend Item </a>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
 
-    <mat-grid-tile>
+    <!--<mat-grid-tile>
       <mat-card [routerLink]="['return-item']" class="actionCard">
         <mat-card-content>
           <a class="card-body text-center bg-primary text-light item-links">Return Item</a>
         </mat-card-content>
       </mat-card>
-    </mat-grid-tile>
+    </mat-grid-tile>-->
 
     <mat-grid-tile>
       <mat-card [routerLink]="['add-item']" class="actionCard">
@@ -34,13 +31,13 @@
       </mat-card>
     </mat-grid-tile>
 
-    <mat-grid-tile>
+    <!--<mat-grid-tile>
       <mat-card [routerLink]="['delete-item']" class="actionCard">
         <mat-card-content>
           <a class="card-body text-center bg-primary text-light item-links">Delete Item</a>
         </mat-card-content>
       </mat-card>
-    </mat-grid-tile>
+    </mat-grid-tile>-->
 
     <mat-grid-tile>
       <mat-card [routerLink]="['view-all']" class="actionCard">
