--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,13 @@
 .actionCard {
     width: 30%;
     text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .item-links {
     line-height: 110px;
+}
+
+.card-body, .mat-card-content {
+    cursor: pointer;
 }
