--- a/src/app/lend-item/lend-item.component.html
+++ b/src/app/lend-item/lend-item.component.html
@@ -1,15 +1,17 @@
 <div>
   <form class="actionForm">
     <mat-form-field>
-      <input matInput id="isbn" placeholder="ISBN">
+      <input matInput id="isbn" name="isbn" #isbn placeholder="ISBN">
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput placeholder="Reader ID">
+      <input matInput placeholder="Reader ID" name="readerId" id="readerId" #readerId>
     </mat-form-field>
 
     <button mat-icon-button style="width:40px">
-      <button mat-fab color="primary">Add <i class="material-icons">add</i></button>
+      <button mat-fab color="primary" (click)="postData(isbn,readerId);">Add <i class="material-icons">add</i></button>
     </button>
   </form>
 </div>
+
+<div class="responseMsg">{{responseMsg}}</div>
