--- a/src/app/view-all/view-all.component.scss
+++ b/src/app/view-all/view-all.component.scss
@@ -1,8 +1,9 @@
 .mat-card {
     display: inline-flex;
     height:10vh;
-    width: 22%;
+    width: 29%;
     margin: 11px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .mat-card-header {
