--- a/src/app/view-all/view-all.component.html
+++ b/src/app/view-all/view-all.component.html
@@ -13,6 +13,12 @@
     <mat-card-content>
       {{book.authors}}
     </mat-card-content>
+    <mat-card-content>
+      {{book.publisher}}
+    </mat-card-content>
+    <mat-card-content>
+      {{book.pageCount}}
+    </mat-card-content>
   </mat-card>
 
   <!--DVDs-->
@@ -25,7 +31,19 @@
       {{dvd.duration}}
     </mat-card-content>
     <mat-card-content>
+      {{dvd.producer}}
+    </mat-card-content>
+    <mat-card-content>
       {{dvd.sector}}
+    </mat-card-content>
+    <mat-card-content>
+      {{dvd.sector}}
+    </mat-card-content>
+    <mat-card-content>
+      {{dvd.publDate}}
+    </mat-card-content>
+    <mat-card-content>
+      {{dvd.borrowedDate}}
     </mat-card-content>
   </mat-card>
 
@@ -44,6 +62,12 @@
     <mat-card-content>
       {{odBook.authors}}
     </mat-card-content>
+    <mat-card-content>
+      {{odBook.publisher}}
+    </mat-card-content>
+    <mat-card-content>
+      {{odBook.pageCount}}
+    </mat-card-content>
   </mat-card>
 
   <!--DVDs-->
@@ -60,6 +84,15 @@
     </mat-card-content>
     <mat-card-content>
       {{odDVD.sector}}
+    </mat-card-content>
+    <mat-card-content>
+      {{odDVD.sector}}
+    </mat-card-content>
+    <mat-card-content>
+      {{odDVD.publDate}}
+    </mat-card-content>
+    <mat-card-content>
+      {{odDVD.borrowedDate}}
     </mat-card-content>
   </mat-card>
 
