--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,10 @@ body {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-card {box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;}
+
+    /* On mouse-over, add a deeper shadow */
+.mat-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
