--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,3 +26,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
+
+.mat-tab-body.mat-tab-body-active {
+    min-height: 650px !important;
+}
